--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
   - mkdir build
   - cd build
   - cmake -DAMQP-CPP_BUILD_EXAMPLES=OFF -DAMQP-CPP_LINUX_TCP=ON ..
-  - make && make install
+  - make && sudo make install
 
 # Build steps
 script:
