--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
   - make
 
 after_success:
-  - coveralls --root bin/ -E ".*gtest.*" -E ".*Makefile.*"
+  - coveralls --root ../bin/ -E ".*gtest.*" -E ".*Makefile.*"
