Added ldl library.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,3 +12,4 @@ add_library(planeSpotter ${SOURCES})
 target_link_libraries(PlaneSpotter amqpcpp)
 target_link_libraries(PlaneSpotter pthread)
 target_link_libraries(PlaneSpotter event)
+target_link_libraries(PlaneSpotter dl)
