--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,16 @@ compiler:
 
 before_install:
   - sudo apt-get install cmake libevent-dev libgtest-dev
+  - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
+  - sudo tar xf release-1.7.0.tar.gz
+  - cd googletest-release-1.7.0
+  - sudo cmake -DBUILD_SHARED_LIBS=ON .
+  - sudo make
+  - sudo cp -a include/gtest /usr/include
+  - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
   - sudo pip install cpp-coveralls
   - git clone https://github.com/CopernicaMarketingSoftware/AMQP-CPP.git
+  - cd "${TRAVIS_BUILD_DIR}"
   - cd AMQP-CPP
   - mkdir build
   - cd build
