--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ target_link_libraries(PlaneSpotter amqpcpp)
 target_link_libraries(PlaneSpotter pthread)
 target_link_libraries(PlaneSpotter event)
 target_link_libraries(PlaneSpotter dl)
+target_link_libraries(PlaneSpotter boost_system)
