--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - sudo wget https://github.com/google/googletest/archive/release-1.7.0.tar.gz
   - sudo tar xf release-1.7.0.tar.gz
   - cd googletest-release-1.7.0
-  - sudo cmake -DBUILD_SHARED_LIBS=ON . && make
+  - sudo cmake -DBUILD_SHARED_LIBS=ON . && sudo make
   - sudo cp -a include/gtest /usr/include
   - sudo cp -a libgtest_main.so libgtest.so /usr/lib/
   - sudo pip install cpp-coveralls
