Using boost for TCP comm

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,4 +3,8 @@
 # ------------------------------------------------------------------------------
 file(GLOB TEST_SOURCES "*cpp")
 add_executable(PlaneSpotter_Test ${TEST_SOURCES})
-target_link_libraries(PlaneSpotter_Test planeSpotter gtest pthread)
+target_link_libraries(PlaneSpotter_Test planeSpotter 
+                                        gtest 
+                                        pthread 
+                                        boost_system 
+                                        boost_thread)
